--- a/lab3/stylesheet325.css
+++ b/lab3/stylesheet325.css
@@ -22,18 +22,14 @@ h1,h3 {
 }
 
 body {
-    margin:0;
     overscroll-behavior: none;
-    background-color: #282828;
+    background-color: hsl(0, 0%, 16%);
     color: aliceblue;
 }
 
 #navbar {
     list-style-type: none;
     display:flex;
-    height: 40px;
-    margin: 0;
-    padding: 0;
     background-color: black;
 }
 
@@ -42,8 +38,6 @@ li.active {
   }
 
 li {
-    margin-right: 10px;
-    margin-top:18px;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size:larger;
 }
@@ -54,28 +48,16 @@ col.middle {
 
 a.nav:link {color:white;}
 a.nav:visited {color:white;}
-a.nav:hover {color: rgb(201, 0, 201);}
 
 a:link {color: #b7fffa;}
 a:visited {color: #9370fe;}
 a:hover {color: #c0aaff;}
 
-header {
-    margin: 10px;
-}
-
-section.art {
-    background-image: url("masthead.jpeg");
-    margin:0%;
-    padding:0%;
-}
-
 div.art {
     background-color: #282828;
-    margin-left: 100px;
-    margin-right: 100px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+}
+section.art {
+    background-image: url("masthead.jpeg");
 }
 
 table,th,td {
@@ -83,6 +65,4 @@ table,th,td {
     border-collapse: collapse;
 }
 
-dt {
-    padding-bottom: 0%;
-}
+
